# grunge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  index.html  library.js  run.sh  style.css
src/: grungedefs.h  main.c
src/client/: c_player.c  c_player.h  i_input.c  i_input.h  i_video.c  i_video.h  r_main.c  r_main.h
src/math/: m_math.h  m_vec.c  m_vec.h
src/server/: s_ents.c  s_ents.h  s_tick.c  s_tick.h
